# sphinxcontrib-towncrier

./: .codecov.yml  .coveragerc  .darglint  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  mypy.ini  nitpick-style.toml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  toxfile.py
.github/: FUNDING.yml
.github/actions/cache-keys/: action.yml
.github/reusables/tox-dev/workflow/reusable-tox/hooks/prepare-for-tox-run/: action.yml
.github/stdlib-workflows/reusable-tox/actions/post-src-checkout/: action.yml
.github/workflows/: check.yml  ci-cd.yml  reusable-linters.yml  reusable-tox.yml  tox-linters.yaml  tox-tests.yaml
dependencies/lock-files/: dist-build-constraints.txt
docs/: change-notes-layout.rst  changelog.rst  conf.py  index.rst  requirements.in  requirements.txt
docs/_static/: custom.css
src/sphinxcontrib/towncrier/: __init__.py  _compat.py  _data_transformers.py  _fragment_discovery.py  _towncrier.py  _version.py  ext.py  py.typed
tests/: __init__.py  _compat.py  _data_transformers_test.py  _fragment_discovery_test.py  _towncrier_test.py  ext_test.py  test_version.py  units_test.py  version_test.py
