[metadata]
name = sphinxcontrib-towncrier
url = https://github.com/sphinx-contrib/sphinxcontrib-towncrier
project_urls =
  GitHub: repo = https://github.com/sphinx-contrib/sphinxcontrib-towncrier
  GitHub: issues = https://github.com/sphinx-contrib/sphinxcontrib-towncrier/issues
description = An RST directive for injecting a Towncrier-generated changelog draft containing fragments for the unreleased (next) project version
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sviatoslav Sydorenko
author_email = wk+pypi/sphinxcontrib-towncrier@sydorenko.org.ua
maintainer = Oleksiy Vasylyshyn
maintainer_email = slsh1o-git@protonmail.com
license = BSD-3-Clause
license_files =
  LICENSE
classifiers =
  Development Status :: 3 - Alpha

  Framework :: Sphinx
  Framework :: Sphinx :: Extension

  Intended Audience :: Developers

  Operating System :: OS Independent

  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13

  Topic :: Software Development :: Documentation

  Topic :: Documentation :: Sphinx
  Topic :: System :: Software Distribution
  Topic :: Utilities

[options]
include_package_data = True
install_requires =
  sphinx
  towncrier >= 23
package_dir =
  = src
packages = find_namespace:
python_requires = >= 3.9
zip_safe = True

[options.packages.find]
where = src
